topic modelling notebooks documented

--- a/topic_modeling_notebooks/topic_modeling_in_depth.ipynb
+++ b/topic_modeling_notebooks/topic_modeling_in_depth.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Application of an LDA Topic Model to our corpus"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -41,51 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.OutputArea.auto_scroll_threshold = 9999;"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "IPython.OutputArea.auto_scroll_threshold = 9999;"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "news_df1 = pd.read_pickle('../news_df_norm1.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "news_df2 = pd.read_pickle('../news_df_norm2.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "news_df1 = pd.read_pickle('../news_df_norm1.pkl')\n",
+    "news_df2 = pd.read_pickle('../news_df_norm2.pkl')\n",
     "news_df = pd.concat([news_df1, news_df2])"
    ]
   },
@@ -99,8 +67,18 @@
     "    return [w for w in wordLst if w in vocab]\n",
     "\n",
     "\n",
-    "def topic_loop(df, num_topic, max_df, max_feature, norm, alpha, eta, random_number=None): \n",
-    "    TFVectorizer = sklearn.feature_extraction.text.TfidfVectorizer(max_df=max_df, min_df=20, max_features=max_feature, stop_words=basic_cc)\n",
+    "def topic_loop(df, num_topic, max_df, max_feature, norm, alpha, eta, random_number=None):\n",
+    "    \"\"\"\n",
+    "    Outputs top topics words according throughout all the hyperparameter combinations.\n",
+    "    Params:\n",
+    "        df: Dataframe with text to be analyzed. Requires column named \"normalized tokens\" with text \n",
+    "            as tokens that have been stemmed and lemmatized.\n",
+    "        random_number: Seed for the LdaModel. Default None will give out a different model every \n",
+    "            time for the same parameter combination.\n",
+    "        All other parameters are lists of that param name to be passed to gensim.LdaModel\n",
+    "    \"\"\"\n",
+    "    TFVectorizer = sklearn.feature_extraction.text.TfidfVectorizer(max_df=max_df, min_df=20, \n",
+    "                                                                   max_features=max_feature, stop_words=basic_cc)\n",
     "    TFVects = TFVectorizer.fit_transform(df['text'])\n",
     "\n",
     "    # drop\n",
@@ -120,7 +98,8 @@
     "    #newsm = gensim.corpora.MmCorpus(serial_str)\n",
     "\n",
     "    # Topic model\n",
-    "    lda = gensim.models.ldamodel.LdaModel(corpus=corpus, id2word=dictionary, num_topics=num_topic, alpha=alpha, eta=eta, random_state=random_number)\n",
+    "    lda = gensim.models.ldamodel.LdaModel(corpus=corpus, id2word=dictionary, num_topics=num_topic, \n",
+    "                                          alpha=alpha, eta=eta, random_state=random_number)\n",
     "    topicsDict = {}\n",
     "    for topicNum in range(lda.num_topics):\n",
     "        topicWords = [w for w in lda.show_topic(topicNum, topn=20)]\n",
@@ -142,6 +121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Incorporating some repeated, non-meaningful words to our stopwords list, and setting the parameters for our topic modelling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -156,6 +142,13 @@
     "\n",
     "alpha = 0.1\n",
     "eta = 0.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br> To assess topic stability, we repeat the process without seed and measure similarity between the topics created."
    ]
   },
   {
@@ -335,6 +328,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at the word distribution for each of the topics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -421,12 +421,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We use the topic proportions to make statements about which countries devote their news to. Here we make and plot this calculation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def averageTopicProportions(topic_per_doc):\n",
+    "    \"\"\"\n",
+    "    Calculates and plots average topic proportions per country given a topics per document dataframe\n",
+    "    \"\"\"\n",
     "    topic_per_doc['country'] = [topic_per_doc.iloc[i,0][:2] for i in range(topic_per_doc.shape[0])]\n",
     "    group_country = topic_per_doc.groupby(['country']).mean().reset_index()\n",
     "    topics = {}\n",
@@ -468,6 +478,9 @@
    "outputs": [],
    "source": [
     "def topTopic(topic_per_doc, num_topics):\n",
+    "    \"\"\"\n",
+    "    Calculates and plots topic proportions per country using only the most salient topic per document.\n",
+    "    \"\"\"\n",
     "    topic_per_doc['country'] = [topic_per_doc.iloc[i,0][:2] for i in range(topic_per_doc.shape[0])]\n",
     "    \n",
     "    # Find max topic proportion per document\n",
