--- a/topic_modeling_notebooks/topic_modeling_systematic.ipynb
+++ b/topic_modeling_notebooks/topic_modeling_systematic.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# An exploration on topic modeling. \n",
+    "# Searching through the LDA hyperparameters to find topics that are meaningful."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -65,62 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##################################################\n",
-    "###  Normalize using basic stemmer and lemmer  ###\n",
-    "##################################################\n",
-    "\n",
-    "# news_df = pd.read_pickle('../news_df.pkl')\n",
-    "\n",
-    "# basic_cc = lucem_illud.stop_words_basic + ['climat', 'chang']\n",
-    "\n",
-    "# news_df['tokenized_text'] = news_df['text'].apply(lambda x: nltk.word_tokenize(x))\n",
-    "\n",
-    "# news_df['normalized_tokens'] = news_df['tokenized_text'].apply(lambda x: lucem_illud.normalizeTokens(x, \n",
-    "#                                                                                                      stopwordLst = lucem_illud.stop_words_basic))\n",
-    "\n",
-    "# news_df['normalized_tokens_wo_cc'] = news_df['tokenized_text'].apply(lambda x: lucem_illud.normalizeTokens(x, \n",
-    "#                                                                                                      stopwordLst = basic_cc)) \n",
-    "\n",
-    "# news_df['normalized_tokens_stem'] = news_df['tokenized_text'].apply(lambda x: lucem_illud.normalizeTokens(x, \n",
-    "#                                                                                                      stopwordLst = basic_cc,\n",
-    "#                                                                                                      stemmer = lucem_illud.stemmer_basic)) \n",
-    "\n",
-    "# news_df['normalized_tokens_lem'] = news_df['tokenized_text'].apply(lambda x: lucem_illud.normalizeTokens(x, \n",
-    "#                                                                                                      stopwordLst = basic_cc,\n",
-    "#                                                                                                      stemmer = lucem_illud.stemmer_basic,\n",
-    "#                                                                                                     lemmer = lucem_illud.lemmer_basic)) \n",
-    "\n",
-    "# news_df1 = news_df[:3000]\n",
-    "# news_df2 = news_df[3000:]\n",
-    "\n",
-    "# news_df1.to_pickle('../news_df_norm1.pkl')\n",
-    "# news_df2.to_pickle('../news_df_norm2.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "news_df1 = pd.read_pickle('../news_df_norm1.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "news_df2 = pd.read_pickle('../news_df_norm2.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "news_df1 = pd.read_pickle('../news_df_norm1.pkl')\n",
+    "news_df2 = pd.read_pickle('../news_df_norm2.pkl')\n",
     "news_df = pd.concat([news_df1, news_df2])"
    ]
   },
@@ -140,27 +94,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_topics = [3,8,20]\n",
-    "# max_dfs = [0.5, 0.7]\n",
-    "# max_features = [1000, 3000]\n",
-    "# norm_type = [ '_stem']\n",
-    "\n",
-    "# alphas = [ 0.001, 0.1, 0.5]\n",
-    "# etas = [0.001, 0.1, 0.5]\n",
-    "\n",
     "def topic_loop(df, stop_words, num_topics, max_dfs, max_features, norm_type, alphas, etas, random_number=None):\n",
+    "    \"\"\"\n",
+    "    Outputs top topics words according throughout all the hyperparameter combinations.\n",
+    "    Params:\n",
+    "        df: Dataframe with text to be analyzed. Requires column named \"normalized tokens\" with text \n",
+    "            as tokens that have been stemmed and lemmatized.\n",
+    "        random_number: Seed for the LdaModel. Default None will give out a different model every \n",
+    "            time for the same parameter combination.\n",
+    "        All other parameters are lists of that param name to be passed to gensim.LdaModel\n",
+    "    \"\"\"\n",
     "    for num in num_topics:\n",
     "        for d in max_dfs:\n",
     "            for f in max_features:\n",
     "\n",
-    "                TFVectorizer = sklearn.feature_extraction.text.TfidfVectorizer(max_df=d, min_df=20, max_features=f, stop_words=stop_words)\n",
+    "                TFVectorizer = sklearn.feature_extraction.text.TfidfVectorizer(max_df=d, min_df=20, \n",
+    "                    max_features=f, stop_words=stop_words)\n",
     "                TFVects = TFVectorizer.fit_transform(df['text'])\n",
     "                \n",
     "                for norm in norm_type:\n",
     "                    # drop\n",
     "                    reduced_token_str = 'reduced_tokens_' + norm + '_' + str(num) + '_' + str(d) + '_' + str(f)\n",
     "                    norm_col = 'normalized_tokens' + norm\n",
-    "                    df[reduced_token_str] = df[norm_col].apply(lambda x: dropMissing(x, TFVectorizer.vocabulary_.keys()))\n",
+    "                    df[reduced_token_str] = df[norm_col].apply(\n",
+    "                        lambda x: dropMissing(x, TFVectorizer.vocabulary_.keys()))\n",
     "\n",
     "                    # Make dictionary\n",
     "                    dictionary = gensim.corpora.Dictionary(df[reduced_token_str])\n",
@@ -176,7 +133,8 @@
     "                    # Topic model\n",
     "                    for a in alphas:\n",
     "                        for e in etas: \n",
-    "                            lda = gensim.models.ldamodel.LdaModel(corpus=corpus, id2word=dictionary, num_topics=num, alpha=a, eta=e, random_state=random_number)\n",
+    "                            lda = gensim.models.ldamodel.LdaModel(corpus=corpus, \n",
+    "                                id2word=dictionary, num_topics=num, alpha=a, eta=e, random_state=random_number)\n",
     "\n",
     "                            topicsDict = {}\n",
     "                            for topicNum in range(lda.num_topics):\n",
@@ -184,9 +142,18 @@
     "                                topicsDict['Topic_{}'.format(topicNum)] = topicWords\n",
     "\n",
     "                            wordRanksDF = pandas.DataFrame(topicsDict)\n",
-    "                            print('Norm: ', norm, 'Num topics: ', num, ', Max df: ', d, ' Max features: ', f, ' Alpha: ', a, ' Eta: ', e)\n",
+    "                            print('Norm: ', norm, 'Num topics: ', num, ', Max df: ', d,\n",
+    "                                  ' Max features: ', f, ' Alpha: ', a, ' Eta: ', e)\n",
     "                            print(wordRanksDF)\n",
-    "                            print()        \n"
+    "                            print()        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br> <br>\n",
+    "The rest of the notebook is a search through different parameters looking for topics that show some internal semantic consistency. The ultimate hyperparameter combination was chosen based on this, whether the words within the topic seemed to reflect a consistent theme."
    ]
   },
   {
@@ -2814,6 +2781,13 @@
     }
    ],
    "source": [
+    "# num_topics = [3,8,20]\n",
+    "# max_dfs = [0.5, 0.7]\n",
+    "# max_features = [1000, 3000]\n",
+    "# norm_type = [ '_stem']\n",
+    "\n",
+    "# alphas = [ 0.001, 0.1, 0.5]\n",
+    "# etas = [0.001, 0.1, 0.5]\n",
     "topic_loop(news_df, num_topics, max_dfs, max_features, norm_type, alphas, etas)"
    ]
   },
